# dsge-py

./: .env.template  BACKGROUND.md  CLAUDE.md  CLEMENTINE_IMPLEMENTATION_STATUS.md  CLEMENTINE_MODEL_README.md  ECONOMIC_MODELS_REVIEW.md  IMPLEMENTATION_SUMMARY.md  LITERATURE_REVIEW_DSGE_MODELS.md  NYFED_PARAMETER_VERIFICATION.md  PLAN.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
data/: DATA_DOWNLOAD_NOTE.md  README.md  download_nyfed_data.py  fred_series_mapping.py  nyfed_synthetic_data.csv  prism_fred_mapping.py  stlouisfed_fred_mapping.py
docs/: .gitignore  README.md  api.md  conf.py  features.md  implementation-notes.md  index.md  introduction.md  references.bib
docs/models/: clementine.md  nyfed.md
docs/user-guide/: creating-models.md  using-models.md
examples/: README_ESTIMATION_FORECASTING.md  estimate_nyfed_model.py  forecast_nyfed_model.py  generate_nyfed_synthetic_data.py  minimal_ar1.py  simple_rbc.py  stlouisfed_example.py  zlb_estimation.py  zlb_full_estimation.py  zlb_nk_model.py
models/: IMPLEMENTATION_STATUS.md  IMPLEMENTING_STLOUISFED.md  README_GALI2010.md  README_NYFED.md  README_PRISM.md  README_STLOUISFED.md  VERIFICATION_GALI2010.md  clementine_model.py  gali_2010_unemployment.py  nyfed_model_1002.py  prism_inspired_model.py  simple_nk_model.py  smets_wouters_2007.py  stlouisfed_dsge.py  stlouisfed_dsge_complete.py
results/nyfed_forecasts/: forecast_lower_68.csv  forecast_lower_90.csv  forecast_mean.csv  forecast_upper_68.csv  forecast_upper_90.csv
src/dsge/: __init__.py  config.py
src/dsge/data/: __init__.py  fred_loader.py
src/dsge/estimation/: __init__.py  likelihood.py  occbin_estimation.py  smc.py
src/dsge/filters/: __init__.py  kalman.py  occbin_filter.py
src/dsge/forecasting/: __init__.py  forecast.py
src/dsge/models/: __init__.py  base.py  parameters.py
src/dsge/solvers/: __init__.py  linear.py  occbin.py
src/dsge/utils/: __init__.py
tests/: README.md  test_clementine_model.py  test_config.py  test_data_loading.py  test_filters.py  test_forecasting.py  test_fred_integration.py  test_gali_2010_model.py  test_models.py  test_nyfed_model.py  test_occbin.py  test_occbin_estimation.py  test_occbin_filter.py  test_prism_inspired_model.py  test_simple_nk_model.py  test_smets_wouters_model.py  test_solvers.py  test_stlouisfed_model.py
validation/: VALIDATION_REPORT.md  nyfed_solution_validation.py  nyfed_validation_notebook.py
