[project]
name = "dsge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fredapi>=0.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=9.0.0",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-bibtex>=2.6.5",
]

[tool.pytest.ini_options]
# Pytest configuration
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external resources",
    "unit: marks tests as unit tests",
]

# Show extra test summary info
addopts = [
    "-ra",  # Show all test outcomes (except passed)
    "--strict-markers",  # Raise error on unknown markers
    "--tb=short",  # Shorter traceback format
    "-v",  # Verbose output
]

# Ignore warnings from dependencies
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
