[project]
name = "dsge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fredapi>=0.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-bibtex>=2.6.5",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
# Pytest configuration
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external resources",
    "unit: marks tests as unit tests",
]

# Show extra test summary info
addopts = [
    "-ra",  # Show all test outcomes (except passed)
    "--strict-markers",  # Raise error on unknown markers
    "--tb=short",  # Shorter traceback format
    "-v",  # Verbose output
]

# Ignore warnings from dependencies
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
# Target Python 3.11+
target-version = "py311"
# Line length for formatting
line-length = 100
# Exclude example, validation, data scripts, models, and tests from strict checks
exclude = [
    "examples/**",
    "validation/**",
    "data/**",
    "docs/conf.py",
    "tests/**",
    "models/**",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Automatically format docstrings
docstring-code-format = true

[tool.ruff.lint]
select = [
    # ruff-specific rules
    "RUF",
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # McMabe code complexity
    "C90",
    # PEP8 Naming
    "N",
    # pydocstyle
    "D",
    # pylint
    "PL",
    # numpy deprecated alias
    "NPY001",
    # eradicate
    "ERA",
    # flake8-annotations
    "ANN",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T100",
    # flake8-errmsg
    "EM",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-no-pep420
    "INP",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8 quotes
    "Q",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-todos
    "TD",
    # flake8-type-checking
    "TCH",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH",
]

ignore = [
    "ISC001",  # avoid conflicts with the ruff formatter
    "D203",  # D203 (one-blank-line-before-class) conflicts with D211 (no-blank-line-before-class)
    "D212",  # D212 (multi-line-summary-first-line) conflicts with D213 (multi-line-summary-second-line)
    # Disable pydocstyle checks for "google" style. See here:
    # - https://www.pydocstyle.org/en/stable/error_codes.html#default-conventions
    "D204",
    "D213",
    "D215",
    "D400",
    "D401",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "PLR0913",
    "TC001",
    "TC002",
    # Mathematical notation conventions for DSGE modeling
    "N806",  # Capital letters for matrices (T, R, C, H, etc.) are standard in linear algebra
    "N803",  # Greek letters and mathematical notation for parameters
    "PLC2401",  # Non-ASCII names (Greek letters) are standard in economics
    "RUF001",  # Allow Greek letters in strings
    "RUF002",  # Allow Greek letters in docstrings
    "RUF003",  # Allow Greek letters in comments
    # Research code conventions
    "ERA001",  # Commented code might be intentional for research/experimentation
    "INP001",  # Scripts and examples don't need __init__.py
    # Acceptable code patterns for DSGE library
    "PLW0603",  # Global statements used for singleton pattern
    "PLC0415",  # Conditional imports for optional dependencies
    "ARG001",  # Unused function arguments in interface methods
    "ARG002",  # Unused method arguments in interface/abstract methods
    "PLR0911",  # Too many return statements - acceptable for transformation functions
    "PLR0912",  # Too many branches - acceptable for data loading with many options
    "PLR0915",  # Too many statements - acceptable for complex mathematical functions
    "PLR2004",  # Magic values - numerical tolerances are standard
    "C901",  # Complex functions - acceptable for mathematical/data loading functions
    "ANN001",  # Missing type annotations for some arguments
    "ANN202",  # Missing return type for private/abstract methods
    "ANN204",  # Missing return type for __post_init__ (dataclasses)
    "D107",  # Missing docstring in __init__
    "B904",  # Exception handling without 'from' clause
    "E722",  # Bare except - used for fallback in numerical methods
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty]
# Strict type checking settings (ty is strict by default)
environment.python-version = "3.11"
